--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "lodash": "^4.17.21",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
@@ -32,6 +35,7 @@
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.194",
     "jasmine-core": "~4.5.0",
