--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.6",
+    "angular-in-memory-web-api": "^0.15.0",
     "bootstrap": "^5.2.3",
     "lodash": "^4.17.21",
     "ng2-order-pipe": "^0.1.5",
